--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,21 +9,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build-ubuntu-22-04:
-
-    runs-on: ubuntu-22.04
-
-    steps:
-    - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag strumeg/httpinfo:$(date +%s)
-
   build-ubuntu-24-04:
 
     runs-on: ubuntu-24.04
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag strumeg/httpinfo:$(date +%s)
+      run: docker build . --file Dockerfile --tag strumeg/httpinfo:latest
+    - name: Push image to Docker Hub
+      run: |
+        docker push strumeg/httpinfo:latest
