--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,12 @@
 name: Docker Image CI
 
 on:
-  [workflow_dispatch]
+  push:
+    paths-ignore: "**.md"
+    branches: [ "main" ]
+  pull_request:
+    paths-ignore: "**.md"
+    branches: [ "main" ]
 
 jobs:
   build-ubuntu-24-04:
