--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,18 @@ jobs:
       with:
         username: ${{ vars.DOCKER_HUB_USER }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.DOCKER_GITHUB_TOKEN }}
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
         push: true
-        tags: ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
+        tags: |
+          ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
+          ghcr.io/${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
