--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,4 +36,4 @@ jobs:
         push: true
         tags: |
           ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
-          ghcr.io/${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
+          ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
