--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,9 @@ jobs:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ secrets.DOCKER_GITHUB_TOKEN }}
+    - name: Downcase REPOSITORY_OWNER
+      run: |
+        echo "REPOSITORY_OWNER=${${{ github.repository_owner }}@L}" >> "${GITHUB_ENV}"
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     - name: Build and push
@@ -36,4 +39,4 @@ jobs:
         push: true
         tags: |
           ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
-          ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+          ghcr.io/${{ REPOSITORY_OWNER }}/${{ github.event.repository.name }}:latest
