--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,4 +39,4 @@ jobs:
         push: true
         tags: |
           ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
-          ghcr.io/${{ keilwin }}/${{ github.event.repository.name }}:latest
+          ghcr.io/keilwin/${{ github.event.repository.name }}:latest
