--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,6 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -37,6 +35,11 @@ jobs:
       uses: docker/build-push-action@v6
       with:
         push: true
+        target: |
+          builder
+          tester
+          runner
+        no-cache: true
         tags: |
           ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
           ghcr.io/keilwin/${{ github.event.repository.name }}:latest
