--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,15 +31,24 @@ jobs:
         echo "REPOSITORY_OWNER=${${{ github.repository_owner }}@L}" >> "${GITHUB_ENV}"
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Build and push
+    - name: Build
+      uses: docker/build-push-action@v6
+      with:
+        push: false
+        target: builder
+        load: true
+    - name: Test
+      uses: docker/build-push-action@v6
+      with:
+        push: false
+        target: tester
+        no-cache: true
+        load: true
+    - name: Prepare and push
       uses: docker/build-push-action@v6
       with:
         push: true
-        target: |
-          builder
-          tester
-          runner
-        no-cache: true
+        target: runner
         tags: |
           ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
           ghcr.io/keilwin/${{ github.event.repository.name }}:latest
