--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,18 +31,12 @@ jobs:
         echo "REPOSITORY_OWNER=${${{ github.repository_owner }}@L}" >> "${GITHUB_ENV}"
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Build
-      uses: docker/build-push-action@v6
-      with:
-        push: false
-        target: builder
-        no-cache: true
-        load: true
-    - name: Test
+    - name: Build and Test
       uses: docker/build-push-action@v6
       with:
         push: false
         target: tester
+        no-cache: true
         load: true
     - name: Prepare and push
       uses: docker/build-push-action@v6
