--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,6 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -33,10 +31,18 @@ jobs:
         echo "REPOSITORY_OWNER=${${{ github.repository_owner }}@L}" >> "${GITHUB_ENV}"
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-    - name: Build and push
+    - name: Build and Test
+      uses: docker/build-push-action@v6
+      with:
+        push: false
+        target: tester
+        no-cache: true
+        load: true
+    - name: Prepare and push
       uses: docker/build-push-action@v6
       with:
         push: true
+        target: runner
         tags: |
           ${{ vars.DOCKER_HUB_USER }}/${{ github.event.repository.name }}:latest
           ghcr.io/keilwin/${{ github.event.repository.name }}:latest
