Поправил UI, launch.json
Если ContentLength равен нулю, поле Body не отображается.
Запуск в vscode с учетом пути к логам

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,9 @@
                 "--key-path",
                 "./ssl/server.key",
                 "--dump-path",
-                "./temp/dump.json"
+                "./temp/dump.json",
+                "--log-path",
+                "./logs/httpinfo.log",
             ]
         }
     ]
