--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,13 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
+.venv
+
 *.env
 *.db
 *.tar
 
 ssl/
 temp/
+stats/
 logs/
